# cokacenc

./: .gitignore  CNAME  Cargo.toml  README.md  build.py  build_manual.md  index.html  install.sh
assets/: index-1dRX2SBe.css  index-CrFmKQEM.js  index-ma6AIcmB.js  index-wtxQ5wve.css
builder/: __init__.py  config.py  executor.py
src/: crypto.rs  error.rs  main.rs  naming.rs  pack.rs  unpack.rs
website/: README.md  index.html  package-lock.json  package.json
website/src/components/: Features.tsx  FileFormat.tsx  Footer.tsx  Hero.tsx  PowerStrip.tsx  SecurityShowcase.tsx  TerminalPreview.tsx
website/src/components/tutorial/: TutorialPage.tsx
website/src/components/tutorial/sections/: AICommands.tsx  BasicNavigation.tsx  BookmarksHelp.tsx  FileOperations.tsx  FileSelection.tsx  GettingStarted.tsx  GitIntegration.tsx  ImageViewer.tsx  InterfaceOverview.tsx  PanelSystem.tsx  RemoteConnections.tsx  SearchFind.tsx  SettingsConfig.tsx  ViewerEditor.tsx
website/src/pages/: LandingPage.tsx
